k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-hw01-service
spec:
  selector:
    app: arch-hw01-app
  ports:
    - port: 8000
      targetPort: http
