k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arch-hw01-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /otusapp/victor($|/)(.*)
            backend:
              serviceName: arch-hw01-service
              servicePort: 8000
      host: arch.homework
